tests/integration/errors/005_content_after_string.nesl
<<<<<<<<<nesl
{
  good = R"""pv(normal string)pv"""
  bad = R"""pv(string)pv""" extra content here
  another = R"""pv(ok)pv"""
}
=========nesl